Bug 510248 - Mouse Navigation drag automatically releases when moving actual mouse
Summary: Mouse Navigation drag automatically releases when moving actual mouse
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: input (other bugs)
Version First Reported In: 6.4.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: accessibility
Depends on:
Blocks:
 
Reported: 2025-10-05 01:43 UTC by rileyjones207
Modified: 2025-11-11 08:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rileyjones207 2025-10-05 01:43:19 UTC
SUMMARY


STEPS TO REPRODUCE
0. With mouse navigation / mouse keys enabled
1. Hold numpad 5
2. Move cursor using physical mouse

OBSERVED RESULT
After around 1 second, the drag or highlight action will end without you letting go of numpad 5.

EXPECTED RESULT
Mouse cursor would continue dragging or highlighting selection until numpad 5 is released.

WORKAROUND
Before moving the mouse, press any key on keyboard. This gives the expected result.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.16.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 rileyjones207 2025-10-05 01:48:08 UTC
(In reply to rileyjones207 from comment #0)
> SUMMARY
> 
> 
> STEPS TO REPRODUCE
> 0. With mouse navigation / mouse keys enabled
> 1. Hold numpad 5
> 2. Move cursor using physical mouse
> 
> OBSERVED RESULT
> After around 1 second, the drag or highlight action will end without you
> letting go of numpad 5.
> 
> EXPECTED RESULT
> Mouse cursor would continue dragging or highlighting selection until numpad
> 5 is released.
> 
> WORKAROUND
> Before moving the mouse, press any key on keyboard. This gives the expected
> result.
> 
> SOFTWARE/OS VERSIONS
> Operating System: Arch Linux 
> KDE Plasma Version: 6.4.5
> KDE Frameworks Version: 6.18.0
> Qt Version: 6.9.2
> Kernel Version: 6.16.10-arch1-1 (64-bit)
> Graphics Platform: Wayland

SUMMARY
When using mouse navigation / mouse keys along with a real mouse, any highlight or drag action started with numpad 5 will automatically end. This does not occur if you only move the cursor using the keyboard or if you press any key before you move the mouse.
Comment 2 David Redondo 2025-10-06 13:38:44 UTC
Can reproduce.

Note: it doesnt happen if you move the cursor with numpad keys first.
Comment 3 Nate Graham 2025-10-07 19:04:47 UTC
Is this a KCM issue or KWin issue?
Comment 4 Nicolas Fella 2025-10-07 19:05:28 UTC
KWin
Comment 5 David Redondo 2025-10-27 10:45:22 UTC
KWin sends a button up event immediately and repeats that.
Comment 6 David Redondo 2025-10-28 11:30:02 UTC
Git commit 9d226450eff204358deb0dcb4df14a16890db9ea by David Redondo.
Committed on 28/10/2025 at 09:54.
Pushed by davidre into branch 'master'.

plugins/mousekeys: Do not release the pointer button on key repeat events
FIXED-IN:6.4.6

M  +3    -3    src/plugins/mousekeys/mousekeys.cpp

https://invent.kde.org/plasma/kwin/-/commit/9d226450eff204358deb0dcb4df14a16890db9ea
Comment 7 David Redondo 2025-10-28 13:44:28 UTC
Git commit 7f10e1fb6f5325e20d0dee6cd2a11d708d2b5d2f by David Redondo.
Committed on 28/10/2025 at 12:28.
Pushed by davidre into branch 'Plasma/6.5'.

plugins/mousekeys: Do not release the pointer button on key repeat events
FIXED-IN:6.4.6


(cherry picked from commit 9d226450eff204358deb0dcb4df14a16890db9ea)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +3    -3    src/plugins/mousekeys/mousekeys.cpp

https://invent.kde.org/plasma/kwin/-/commit/7f10e1fb6f5325e20d0dee6cd2a11d708d2b5d2f
Comment 8 David Redondo 2025-11-11 08:15:08 UTC
Git commit ec740fc5b52a8ef33d3beffc53d289433a532362 by David Redondo.
Committed on 11/11/2025 at 08:14.
Pushed by davidre into branch 'Plasma/6.4'.

plugins/mousekeys: Do not release the pointer button on key repeat events
FIXED-IN:6.4.6


(cherry picked from commit 9d226450eff204358deb0dcb4df14a16890db9ea)

Co-authored-by: David Redondo <kde@david-redondo.de>

(cherry picked from commit 7f10e1fb6f5325e20d0dee6cd2a11d708d2b5d2f)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +3    -3    src/plugins/mousekeys/mousekeys.cpp

https://invent.kde.org/plasma/kwin/-/commit/ec740fc5b52a8ef33d3beffc53d289433a532362