plugins/mousekeys: Do not release the pointer button on key repeat events

BUG:510248
FIXED-IN:6.4.6


(cherry picked from commit 9d226450eff204358deb0dcb4df14a16890db9ea)

Co-authored-by: David Redondo <kde@david-redondo.de>

(cherry picked from commit 7f10e1fb6f5325e20d0dee6cd2a11d708d2b5d2f)

Co-authored-by: David Redondo <kde@david-redondo.de>